[gd_scene load_steps=5 format=3 uid="uid://tmk5q36mw5xf"]

[ext_resource type="Script" path="res://exit.gd" id="1_j4v6l"]
[ext_resource type="Texture2D" uid="uid://cnjuf50kdrs17" path="res://icon.svg" id="1_kc0hs"]
[ext_resource type="PackedScene" uid="uid://c770eu1a76iam" path="res://wall.tscn" id="3_l884p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6iimd"]
size = Vector2(70, 73)

[node name="Exit" type="Area2D" groups=["Exit"]]
script = ExtResource("1_j4v6l")

[node name="ExitCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_6iimd")
debug_color = Color(0.243137, 0.537255, 0, 0.419608)

[node name="ExitIcon" type="Sprite2D" parent="."]
modulate = Color(1, 0.0392157, 0.0235294, 0.639216)
position = Vector2(1, 1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_kc0hs")

[node name="Wall" parent="." instance=ExtResource("3_l884p")]
position = Vector2(34, -82)
scale = Vector2(0.673638, 0.251554)

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
